# whatthewhat

./: .gitignore  AUTHORS.rst  CONTRIBUTING.rst  HISTORY.rst  LICENSE  Makefile  README.rst  announce.rst  setup.cfg  setup.py  tester.py  tox.ini
docs/: conf.py  index.rst  installation.rst  usage.rst
tests/: test_whatthewhat.py
whatthewhat/: __init__.py  execfile.py  main.py
