[metadata]
name = whatthewhat
description-file = README.rst
author = Doug Hellmann
author-email = doug@doughellmann.com
summary = Launch a Google search for exceptions from Python apps
home-page = https://github.com/dhellmann/whatthewhat
classifier =
    Development Status :: 3 - Alpha
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Intended Audience :: Developers
    Environment :: Console

[global]
setup-hooks =
    pbr.hooks.setup_hook

[files]
packages =
    whatthewhat

[entry_points]
console_scripts =
    wtw = whatthewhat.main:main

[build_sphinx]
all_files = 1
build-dir = docs/build
source-dir = docs/source
